state and pattern/slot examples

--- a/examples/use_patslot/index.html
+++ b/examples/use_patslot/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div data-slot="people">
-        <div data-pattern="person">
+        <div data-pat="person">
             <span data-slot="name"></span>
             <span data-slot="age"></span>
         </div>
