Add dialog example

--- a/examples/use_patslot_nested/index.html
+++ b/examples/use_patslot_nested/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pattern and Slot Example</title>
+    <title>Pattern and Slot Nested Example</title>
     <script src="nested_example.js" defer></script>
 </head>
 
