--- a/examples/use_state_selected/index.html
+++ b/examples/use_state_selected/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>State Example</title>
+    <title>State Selected Example</title>
     <script src="selected_example.js" defer></script>
 </head>
 <body>
