link to all of the examples at the root of the example server and add a note about two-way data binding to the read me

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
 
-    <div><a href="src/index.html">Main example</a></div>
-    <div><a href="examples/use_patslot/index.html">Patterns and slots</a></div>
+<div><a href="examples/use_state/">Use State</a></div>
+<div><a href="examples/use_state_input/">Use State with Input</a></div>
+<div><a href="examples/use_state_selected/">Use State with Selected</a></div>
+<div><a href="examples/use_patslot/">Pattern Slot</a></div>
+<div><a href="examples/use_patslot_fill/">Pattern Slot Fill</a></div>
+<div><a href="examples/use_patslot_nested/">Nested Pattern Slot</a></div>
+<div><a href="examples/use_dialog/">Dialog Example</a></div>
 
 </body>
 </html>
