Add examples for two way data binding. Select options still aren't correctly set.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <div><a href="examples/use_state/">Use State</a></div>
 <div><a href="examples/use_state_input/">Use State with Input</a></div>
+<div><a href="examples/use_state_select_textarea/">Use State with Select and TextArea</a></div>
 <div><a href="examples/use_state_selected/">Use State with Selected</a></div>
+<div><a href="examples/use_state_update/">Use State with Data Binding Updates</a></div>
+<div><a href="examples/use_state_selected_update/">Use State with Data Binding Updates on Selection</a></div>
 <div><a href="examples/use_patslot/">Pattern Slot</a></div>
 <div><a href="examples/use_patslot_fill/">Pattern Slot Fill</a></div>
 <div><a href="examples/use_patslot_nested/">Nested Pattern Slot</a></div>
