Handle updating elements named "selected"

--- a/examples/use_state_selected_update/index.html
+++ b/examples/use_state_selected_update/index.html
@@ -9,6 +9,7 @@
 <body>
     <label></label><input type="radio" name="selected" value="person1"><label>Person 1</label>
     <label></label><input type="radio" name="selected" value="person2">Person 2</label>
+    <input name="selected" />
 
     <div>
       <input name="selected.number" />
