--- a/examples/use_dialog/index.html
+++ b/examples/use_dialog/index.html
@@ -11,13 +11,15 @@
 <body>
 
 <dialog id="my_dialog">
-    <form onsubmit="event.preventDefault(); event.target.parentNode.close()">
-        <input type="hidden" name="path" value="this.my_object" />
-        <input type="hidden" name="method" value="my_method" />
-        <input name="name" />
-        <input type="number" name="age" />
-        <button>Save</button>
-    </form>
+    <div style="padding: 2em; border: 1px solid black;">
+        <form>
+            <input type="hidden" name="path" value="this.my_object" />
+            <input type="hidden" name="method" value="my_method" />
+            <input name="name" />
+            <input type="number" name="age" />
+            <button>Save</button>
+        </form>
+    </div>
 </dialog>
 
 </body>
