Add playwright tests

--- a/examples/use_patslot/index.html
+++ b/examples/use_patslot/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pattern and Slot Example</title>
-    <script src="patslot_example.js" defer></script>
+    <script src="/cjs/examples/use_patslot/patslot_example.js" defer></script>
 </head>
 
 <body>
