--- a/examples/use_state_selected_update/index.html
+++ b/examples/use_state_selected_update/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>State Selected Example</title>
-    <script src="selected_update_example.js" defer></script>
+    <script src="/cjs/examples/use_state_selected_update/selected_update_example.js" defer></script>
 </head>
 <body>
     <label></label><input type="radio" name="selected" value="person1"><label>Person 1</label>
