--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <div><a href="examples/use_state_selected_update/">Use State with Data Binding Updates on Selection</a></div>
 <div><a href="examples/use_patslot/">Pattern Slot</a></div>
 <div><a href="examples/use_patslot_fill/">Pattern Slot Fill</a></div>
+<div><a href="examples/use_patslot_template/">Pattern Slot Template</a></div>
 <div><a href="examples/use_patslot_nested/">Nested Pattern Slot</a></div>
 <div><a href="examples/use_dialog/">Dialog Example</a></div>
 
