--- a/examples/use_dialog/index.html
+++ b/examples/use_dialog/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dialog Example</title>
-    <script src="dialog_example.js" defer></script>
+    <script src="/cjs/examples/use_dialog/dialog_example.js" defer></script>
 </head>
 
 <body>
