--- a/examples/use_patslot_fill/index.html
+++ b/examples/use_patslot_fill/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pattern and Slot Fill Example</title>
-    <script src="fill_example.js" defer></script>
+    <script src="/cjs/examples/use_patslot_fill/fill_example.js" defer></script>
 </head>
 
 <body>
