--- a/examples/use_state/index.html
+++ b/examples/use_state/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>State Example</title>
-    <script src="state_example.js" defer></script>
+    <script src="/cjs/examples/use_state/state_example.js" defer></script>
 </head>
 <body>
 </body>
