--- a/examples/use_state_input/index.html
+++ b/examples/use_state_input/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>State Input Example</title>
-    <script src="input_example.js" defer></script>
+    <script src="/cjs/examples/use_state_input/input_example.js" defer></script>
 </head>
 <body>
     <div>
