Fix test for when a note is both a pattern and a slot

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <div><a href="examples/use_patslot_fill/">Pattern Slot Fill</a></div>
 <div><a href="examples/use_patslot_template/">Pattern Slot Template</a></div>
 <div><a href="examples/use_patslot_nested/">Nested Pattern Slot</a></div>
+<div><a href="examples/use_patslot_pattern_and_slot_node/">Single node both pattern and slot</a></div>
 <div><a href="examples/use_dialog/">Dialog Example</a></div>
 
 </body>
